Completed store page design and functionality changes

--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,33 @@ body {
 .jumbotron.jumbotron-signup {
   background-image: url("../img/will_run.jpg");
   background-position: 50% 5%;
+  font-size: 30px;
 }
 .jumbotron h1 {
   -webkit-text-stroke: 1px white;
 }
+
+/* @media (min-width: 576px) {
+  .jumbotron h1 {
+    font-size: 0.4rem !important;
+  }
+}
+@media (min-width: 768px) {
+  .jumbotron h1 {
+    font-size: 0.4rem !important;
+  }
+}
+@media (min-width: 992px) {
+  .jumbotron h1 {
+    font-size: 0.6rem !important;
+  }
+}
+@media (min-width: 1200px) {
+  .jumbotron h1 {
+    font-size: 1rem !important;
+  }
+} */
+
 
 .btn-primary {
   background: #085ea3;
@@ -57,6 +80,16 @@ body {
 .btn-primary:hover {
   background: #3572a3;
   border: none;
+}
+
+.btn-outline-primary {
+  border: 1px #085ea3 solid;
+  color: #085ea3;
+}
+.btn-outline-primary:hover {
+  border: 1px #085ea3 solid;
+
+  background: #085ea3;
 }
 
 .card {
@@ -87,4 +120,26 @@ footer a:hover {
 
 html {
   font-size: 1rem;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+.divider {
+  height: 1px;
+  width:100%;
+  display:block; /* for use on default inline elements like span */
+  margin: 9px 0;
+  overflow: hidden;
+  background-color: #e5e5e5;
+}
+
+.dropdown:hover>.dropdown-menu {
+  display: block;
+}
+
+.article p {
+  text-indent: 1em;
+  text-align: justify;
 }
